# sonata-system

./: SUMMARY.md  flake.nix  sonata.core  sonata_system.core
data/: top_config.toml
doc/ip/: pinmux.md  pinmux.md.tpl
dv/verilator/: top_verilator.sv
rtl/fpga/: padring.sv  top_sonata.sv
rtl/system/: padring.sv  pinmux.sv  sonata_pkg.sv  sonata_system.sv
rtl/templates/: pinmux.sv.tpl  sonata_pkg.sv.tpl
sw/cpp/uart_check/: Makefile  boot.cc
sw/legacy/demo/: CMakeLists.txt
sw/legacy/demo/heartbleed/: CMakeLists.txt  main.c  openssl_snippets.h
sw/rs/: Cargo.toml  rust-toolchain.toml
sw/rs/bootloader/: Cargo.toml
sw/rs/bootloader/src/: main.rs
util/: top_gen.py
util/top_gen/: generator.py  parser.py
